Endpoints consultar factura y estado factura
